# termsurf

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  deregister.sh  install.sh
.config/: nextest.toml
blog/: 2026-03-14-terminal-meet-browser.md  2026-03-15-how-not-to-build-a-terminal-browser.md
chromium/: README.md
docs/: cef-mvp3.md  cef-mvp5.md  chromium.md  future-issues.md  ghostty.md  keybindings.md  ts3-1-architecture.md  ts3-2-webview.md  ts3-3-xpc.md  ts3-4-webpage.md  ts3-5-profile.md  ts3-7-profile.md  vendor.md  vsync.md  web.md  xdg.md
docs/issues/: 311-resize.md  312-stealing-focus.md  313-helper.md  314-control.md  315-mode.md  316-dim.md  317-input.md  318-cmd.md  319-mouse.md  321-scroll.md  325-webview-framerate.md  326-process-lifecycle.md  328-caret.md  329-focus-lifecycle.md  330-multi-pane.md  331-termsurf.md  332-profile-reconnect.md  333-control-panel-profile.md  334-copy-url.md  336-background.md  337-refresh.md  338-lag.md  339-electron.md  341-performance.md  342-perf-no-win.md  343-optimal-performance.md  344-cef-test.md  345-benchmark.md  346-mouse-performance.md  348-cef-test-ceiling.md  349-bimodal.md  350-callback.md  401-architecture.md  403-swift-rust-cpp.md  404-terminal-emulator.md  407-chromium-poc.md  409-electron-patch.md  410-partial-electron.md  410-two-profiles-2.md  412-one-profile.md  (+103 more)
ghost/include/: ghostty.h
ghost/src/: Surface.zig
ghostboard/: .gitattributes  .prettierignore
ghostboard/src/: main_c.zig  main_ghostty.zig
gui/macos/: com.termsurf.debug.xpc-gateway.bundle.plist  com.termsurf.debug.xpc-gateway.plist  com.termsurf.xpc-gateway.bundle.plist
gui/src/: Surface.zig
homepage/: package.json
issues/: 0000714-seven-digit-issues.md  0000715-wezboard.md  0000716-wezboard-warnings.md  0000717-remove-cocoa-crate.md  0000718-finish-cocoa-removal.md  0000719-wezboard-code-smells.md  0000721-wgpu-upgrade.md  0000723-pane-borders.md  0000724-wezboard-protocol.md  0000725-wezboard-overlay.md  0000726-wezboard-overlay-lifecycle.md  0000727-wezboard-second-webview.md  0000728-wezboard-remaining-protocol.md  0000729-wezboard-reposition-and-protocol.md  0000730-roamium-standalone-install.md  0000731-wezboard-scroll-crash.md  0000732-wezboard-reopen-tab.md  0000734-build-scripts.md  0000735-ghostboard-release-icon.md  0000737-wezboard-icon.md  0000738-wezboard-text-selection.md  0000739-build-warnings.md  0000740-wezboard-display-name.md  0000741-protocol-split.md  0000742-archive-ghostboard.md  0000743-cmd-r-reload.md  0000744-website-icon.md  0000746-overlay-positioning.md  0000747-multiscreen-overlay.md  0000748-clipboard.md  0000749-initial-overlay-flash.md  0000750-target-blank.md  0000751-blog-top-level.md  0000753-blog-failures.md  0000754-screenshots.md  0000755-scroll-neovim.md  0000755-surfari.md  714-seven-digit-issues.md  README.md  ts3-9-resize.md
issues/0000001-competitors/: README.md
issues/0000002-merge-upstream/: README.md
log/: ts3-8-resize.md
proto/: termsurf.proto
roamium/: build.rs
roastty/: ABI_INVENTORY.md  Cargo.toml
scripts/: build-debug.sh  build-issues-index.sh  build-release.sh  build-roamium.sh  build.sh  deploy.sh  generate-icons.sh  ghostboard-geometry-matrix.sh  install-roamium.sh  install.sh  nerd-font-test.sh  png-to-webp.sh  probe-pdf-forms.mjs  release.sh  rename-wezterm.sh  roamium-resources.sh  test-issue-776-pdf.sh  test-issue-796-pdf-security.py  test-issue-799-browser-api-audit.py  test-issue-799-session-isolation.py  test-issue-834-pdf-forms.py  test-issue-834-pdf-native-print.py  test-issue-834-roamium-pdf-regression.py  test-issue-834-surfari-pdf-selection-copy.sh  uninstall.sh
tasklog/: ts3-8-resize.md
ts3/: .gitignore  Cargo.toml
ts4/: .gitignore  Cargo.toml
tui/: Cargo.toml
webkit/: README.md
website/: CLAUDE.md  Dockerfile  package.json  vite.config.ts
wezboard/: .cirrus.yml  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  PRIVACY.md  README-DISTRO-MAINTAINER.md  README.md  get-deps  mkdocs_macros.py
wezboard/color-types/: Cargo.toml  LICENSE.md
wezboard/color-types/src/: lib.rs
wezboard/config/: Cargo.toml
wezboard/config/derive/: Cargo.toml
wezboard/config/src/: background.rs  bell.rs  cell.rs  color.rs  config.rs  daemon.rs  exec_domain.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  scheme_data.rs  serial.rs  ssh.rs  terminal.rs  tls.rs  units.rs  unix.rs  version.rs  window.rs  wsl.rs
wezboard/filedescriptor/: Cargo.toml
wezboard/term/: Cargo.toml  README.md
wezboard/term/src/: color.rs  config.rs  input.rs  lib.rs  screen.rs  terminal.rs
wezboard/term/src/terminalstate/: image.rs  iterm.rs  kitty.rs  mod.rs  performer.rs  sixel.rs
wezboard/term/src/test/: mod.rs
wezboard/termwiz/: CHANGELOG.md  Cargo.toml
wezboard/termwiz/data/: wezboard  wezboard.terminfo
wezboard/termwiz/data/w/: wezboard
wezboard/termwiz/examples/: gennerdfonts.rs
wezboard/termwiz/src/: error.rs  input.rs  lib.rs
wezboard/termwiz/src/caps/: mod.rs  probed.rs
wezboard/termwiz/src/render/: windows.rs
wezboard/wezboard-cell/: Cargo.toml
wezboard/wezboard-cell/src/: color.rs  image.rs  lib.rs
wezboard/wezboard-dynamic/: Cargo.toml  LICENSE.md
wezboard/wezboard-dynamic/derive/: Cargo.toml  LICENSE.md
wezboard/wezboard-dynamic/derive/src/: attr.rs  fromdynamic.rs  todynamic.rs
wezboard/wezboard-dynamic/src/: lib.rs
wezboard/wezboard-dynamic/tests/: fromdynamic.rs  todynamic.rs
wezboard/wezboard-input-types/: Cargo.toml  LICENSE.md
wezboard/wezboard-input-types/src/: lib.rs
wezboard/wezboard-mux-server/: Cargo.toml
wezboard/wezboard-mux-server-impl/: Cargo.toml
wezboard/wezboard-mux-server-impl/src/: dispatch.rs  lib.rs  local.rs  sessionhandler.rs
wezboard/wezboard-mux-server/src/: main.rs  ossl.rs
wezboard/wezboard-surface/: Cargo.toml
wezboard/wezboard-surface/src/: cellcluster.rs  change.rs  hyperlink.rs  lib.rs
wezboard/wezboard-surface/src/line/: cellref.rs  clusterline.rs  line.rs  test.rs  vecstorage.rs
(+3198 files in other folders)
