[package]
authors = ["Wez Longboard <wezboard@termsurf.com>"]
name = "wezboard-term"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/termsurf/termsurf"
description = "The Virtual Terminal Emulator core from wezboard; helpful for implementing terminal emulators"
license = "MIT"
documentation = "https://docs.rs/wezboard-term"
keywords = ["terminal", "emulator", "vte"]
readme = "README.md"

[features]
use_serde = ["termwiz/use_serde", "wezboard-cell/use_serde", "wezboard-escape-parser/use_serde", "wezboard-surface/use_serde"]

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
csscolorparser.workspace = true
downcast-rs.workspace = true
finl_unicode.workspace = true
hex.workspace = true
humansize.workspace = true
image.workspace = true
lazy_static.workspace = true
log.workspace = true
lru.workspace = true
miniz_oxide.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
serde = {workspace=true, features = ["rc"]}
terminfo.workspace = true
unicode-normalization.workspace = true
url.workspace = true
wezboard-bidi.workspace = true
wezboard-dynamic = {workspace = true, features=["std"]}
wezboard-cell = {workspace = true, features=["std", "use_image"]}
wezboard-escape-parser = {workspace = true, features=["std", "use_image"]}
wezboard-surface = {workspace = true, features=["std", "appdata", "use_image"]}

[dev-dependencies]
env_logger.workspace = true
k9.workspace = true

[dependencies.termwiz]
workspace = true
features = ["use_image"]
