[package]
authors = ["Wez Longboard"]
name = "wezboard-cell"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/termsurf/termsurf"
description = "Model a Cell in a Terminal display"
license = "MIT"
documentation = "https://docs.rs/wezboard-cell"
keywords = ["terminal", "cell"]

[dependencies]
finl_unicode.workspace = true
image = {workspace=true, optional=true}
log = {workspace = true, optional=true}
ordered-float = {workspace = true, optional=true}
sha2 = {workspace=true, optional=true}
serde = {workspace=true, optional=true}
thiserror = {workspace=true, optional=true}
wezboard-blob-leases = {workspace = true, optional=true}
wezboard-char-props.workspace = true
wezboard-color-types.workspace = true
wezboard-escape-parser.workspace = true
wezboard-dynamic.workspace = true

[features]
std = ["serde/std", "wezboard-char-props/std", "wezboard-color-types/std", "wezboard-escape-parser/std", "wezboard-dynamic/std", "finl_unicode/std"]
use_serde = ["dep:serde", "wezboard-color-types/use_serde"]
use_image = ["dep:image", "dep:wezboard-blob-leases", "dep:log", "dep:ordered-float", "dep:sha2", "dep:thiserror"]

[dev-dependencies]

