[package]
name = "wezboard-input-types"
version = "0.1.0"
authors = ["Wez Longboard <wezboard@termsurf.com>"]
edition = "2021"
repository = "https://github.com/termsurf/termsurf"
description = "config serialization for wezboard via dynamic json-like data values"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
euclid.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
wezboard-dynamic.workspace = true

[features]
default = ["serde", "std"]
std = ["serde/std", "euclid/std"]
