[package]
authors = ["Wez Longboard"]
name = "wezboard-surface"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/termsurf/termsurf"
description = "Surface and Line types for terminals"
license = "MIT"
documentation = "https://docs.rs/wezboard-surface"
keywords = ["terminal", "surface", "line"]

[dependencies]
bitflags = "2.0"
fancy-regex.workspace = true
finl_unicode.workspace = true
fixedbitset.workspace = true
ordered-float.workspace = true
serde = {workspace=true, optional=true}
siphasher.workspace = true
unicode-segmentation.workspace = true
wezboard-bidi.workspace = true
wezboard-blob-leases = {workspace=true, optional=true}
wezboard-cell = {workspace = true}
wezboard-char-props.workspace = true
wezboard-color-types = {workspace = true}
wezboard-dynamic = {workspace = true}
wezboard-escape-parser = {workspace = true}
wezboard-input-types.workspace = true

[features]
default = []
std = ["fancy-regex/std", "wezboard-cell/std", "wezboard-dynamic/std", "wezboard-escape-parser/std", "fixedbitset/std", "fancy-regex/perf", "fancy-regex/unicode"]
appdata = ["std"]
use_serde = ["serde"] #, "wezboard-color-types/use_serde", "wezboard-blob-leases/serde", "bitflags/serde", "wezboard-input-types/serde", "wezboard-escape-parser/use_serde", "wezboard-cell/use_serde"]
use_image = ["wezboard-cell/use_image"] # "image", "dep:image", "wezboard-escape-parser/use_image", "wezboard-escape-parser/kitty-shm", "wezboard-cell/use_image"]

[dev-dependencies]
k9.workspace = true

